--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
-    "python.formatting.provider": "autopep8",
+    "python.linting.flake8Args": [
+        "--ignore=W293"
+    ],
+    "python.formatting.provider": "black",
     "python.analysis.typeCheckingMode": "basic",
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true
