--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ flake8 = "^6.0.0"
 isort = "^5.12.0"
 mypy = "^1.3.0"
 types-requests = "^2.31.0.0"
+sphinx = "^7.0.1"
+furo = "^2023.5.20"
 
 [tool.black]
 line-length = 119
