--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ authors = ["dmarts05 <dmarts05@estudiantes.unileon.es>"]
 readme = "README.md"
 packages = [{include = "clouding_server_manager"}]
 
+[tool.poetry.scripts]
+clouding-sm = "clouding_server_manager.__main__:main"
+
 [tool.poetry.dependencies]
 python = ">=3.9"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
 click = "^8.1.3"
-
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.2"
