--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "clouding-server-manager"
-version = "1.0.1"
+version = "1.0.2"
 description = "A Python project to easily manage Clouding servers from the command line."
 authors = ["dmarts05 <dmarts05@estudiantes.unileon.es>"]
 readme = "README.md"
@@ -14,6 +14,9 @@ python = ">=3.9"
 requests = "^2.31.0"
 python-dotenv = "^1.0.0"
 click = "^8.1.3"
+
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.3.2"
